# mango

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp  mango.cpp  mango.h  utils.cpp  utils.h
src/gui/: button.cpp  button.h  canvas.cpp  canvas.h  filedisplay.cpp  filedisplay.h  pen.cpp  pen.h  textentry.cpp  textentry.h
